--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,6 +154,24 @@ header nav div ul {
   font-family: "Oswald", sans-serif;
 }
 
+/* animacion del logo */
+.navbar img {
+  height: 50px;
+  position: relative;
+  animation: logo-slide-horizontal 1.5s ease-in-out;
+}
+
+@keyframes logo-slide-horizontal {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50vw);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 .hero {
   text-align: center;
   font-weight: bold;
@@ -295,7 +313,6 @@ p {
   text-align: center;
   font-size: 30px;
   color: black;
-  padding: 35px;
 }
 p.contenido-paginas {
   margin-top: 25px;
@@ -384,25 +401,21 @@ p.contenido-paginas {
   color: #000;
   font-weight: bold;
   transform: rotate(-45deg);
+  animation: loop-animation 1.5s infinite ease-in-out;
 }
 
-.promociones:hover {
-  transform: rotate(0deg) scale(1.1);
-  background-color: orange;
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
-  animation: backwards;
-}
-
-@keyframes hover-shine {
+@keyframes loop-animation {
   0% {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transform: rotate(-45deg) scale(1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   }
   50% {
+    transform: rotate(0deg) scale(1.25);
     box-shadow: 0 8px 20px rgba(255, 165, 0, 0.8);
   }
   100% {
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
+    transform: rotate(-45deg) scale(1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   }
 }
 .lorem-paginas {
@@ -648,31 +661,41 @@ section div div div div article .card-text {
     padding: 8px;
   }
 }
-/* (768px) */
-@media screen and (min-width: 361px) and (max-width: 768px) {
+/*  700px  */
+@media screen and (max-width: 700px) {
   body {
-    font-size: 16px;
-  }
-  .titulo-paginas {
-    font-size: 32px;
-  }
-  .promociones {
-    width: 11rem;
-    height: 11rem;
-    font-size: 1.4rem;
-  }
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    padding: 30px;
-  }
-  .grid-item {
-    padding: 15px;
-    font-size: 1rem;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
   }
   header nav img {
-    width: 75px;
-    height: 60px;
+    width: 70px;
+    height: 50px;
+  }
+  .titulo-paginas {
+    font-size: 24px;
+    padding: 10px;
+  }
+  .promociones {
+    width: 9rem;
+    height: 9rem;
+    font-size: 1rem;
+  }
+  .grid-servicios {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(1, 1fr);
+    width: 500px;
+    margin: 25px auto;
+    gap: 20px;
+    padding: 0%;
+  }
+  .hero h1 {
+    font-size: 1.8rem;
+  }
+  .contact-items {
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
 }
 /* (1440px) */
