--- a/scss/base/_queries.scss
+++ b/scss/base/_queries.scss
@@ -33,169 +33,184 @@
     }
 
 
-.contenedor {
-    display: grid;
-    grid-template-columns: repeat(1, 3fr);
-    gap: 30px;
-    padding: 15px 15px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.card {
-    border: none;
-    border-radius: 15px;
-
-    &-nosotros {
-        padding: 0px;
+    .contenedor {
+        display: grid;
+        grid-template-columns: repeat(1, 3fr);
+        gap: 30px;
+        padding: 15px 15px;
+        max-width: 1200px;
+        margin: 0 auto;
     }
 
-    .card-body {
-        padding: 0px;
+    .card {
+        border: none;
+        border-radius: 15px;
+
+        &-nosotros {
+            padding: 0px;
+        }
+
+        .card-body {
+            padding: 0px;
+        }
     }
-}
 
-.card-text {
-    font-size: 1.1rem;
-    line-height: 1.5;
-    color: #555;
-}
-
-
-.hero {
-    h1 {
-        font-size: 1.5rem;
+    .card-text {
+        font-size: 1.1rem;
+        line-height: 1.5;
+        color: #555;
     }
-}
 
-//footer
 
-.footer-down {
-    display: flex;
-    height: 150px;
-    justify-content: space-between;
-    margin-top: 100px;
-    padding-left: 10px;
-    background-color: $color-black;
+    .hero {
+        h1 {
+            font-size: 1.5rem;
+        }
+    }
 
-    .social-icons {
+    //footer
+
+    .footer-down {
         display: flex;
-        align-items: center;
-        gap: 15px;
-        margin-left: 15px;
-        margin-top: 25px;
+        height: 150px;
+        justify-content: space-between;
+        margin-top: 100px;
+        padding-left: 10px;
+        background-color: $color-black;
+
+        .social-icons {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-left: 15px;
+            margin-top: 25px;
+        }
+
+        iframe {
+            margin-top: 15px;
+            width: 360px;
+        }
+
+
     }
 
-    iframe {
-        margin-top: 15px;
-        width: 360px;
+    .contact-items {
+        grid-template-columns: repeat(1, 1fr);
     }
 
 
-}
-
-.contact-items {
-    grid-template-columns: repeat(1, 1fr);
-}
-
-
-.button-footer {
-    background-color: $color-grey;
-    color: $color-white;
-    padding: 3px 14px;
-    height: 33px;
-    text-align: center;
-    border-radius: 4px;
-    font-size: 16px;
-    margin: auto;
-}
-
-
-.footer-down {
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-}
-
-//oculta globo promociones
-
-.promociones {
-    display: none;
-}
-
-//modifica alto carrousel bootstrap
-
-.carousel-inner img {
-    height: 180px;
-    object-fit: cover;
-}
-
-//grid servicios
-
-
-.grid-servicios {
-
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-template-columns: repeat(1, 1fr);
-    width: 300px;
-    margin: 25px auto;
-    gap: 20px;
-    padding: 0%
-}
-
-.titulo-tarjetas {
-    width: 100%;
-    padding: 5px;
-}
-
-.titulo-tarjetas img {
-    max-width: 100%;
-}
-
-.btn {
-    padding: 8px 12px;
-}
-
-.titulo-paginas {
-    padding: 5px;
-}
-
-.card-body{
-    padding:8px;
-}
-}
-/* (768px) */
-@media screen and (min-width: 361px) and (max-width: 768px) {
-    body {
+    .button-footer {
+        background-color: $color-grey;
+        color: $color-white;
+        padding: 3px 14px;
+        height: 33px;
+        text-align: center;
+        border-radius: 4px;
         font-size: 16px;
+        margin: auto;
+    }
+
+
+    .footer-down {
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    //oculta globo promociones
+
+    .promociones {
+        display: none;
+    }
+
+    //modifica alto carrousel bootstrap
+
+    .carousel-inner img {
+        height: 180px;
+        object-fit: cover;
+    }
+
+    //grid servicios
+
+
+    .grid-servicios {
+
+        display: grid;
+        grid-template-rows: repeat(3, auto);
+        grid-template-columns: repeat(1, 1fr);
+        width: 300px;
+        margin: 25px auto;
+        gap: 20px;
+        padding: 0%
+    }
+
+    .titulo-tarjetas {
+        width: 100%;
+        padding: 5px;
+    }
+
+    .titulo-tarjetas img {
+        max-width: 100%;
+    }
+
+    .btn {
+        padding: 8px 12px;
     }
 
     .titulo-paginas {
-        font-size: 32px;
+        padding: 5px;
     }
 
-    .promociones {
-        width: 11rem;
-        height: 11rem;
-        font-size: 1.4rem;
+    .card-body {
+        padding: 8px;
     }
+}
 
-    .grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        padding: 30px;
-    }
+/*  700px  */
 
-    .grid-item {
-        padding: 15px;
-        font-size: 1rem;
+@media screen and (max-width: 700px) {
+    body {
+        font-size: 15px;
+        margin: 0;
+        padding: 0;
     }
 
     header nav img {
-        width: 75px;
-        height: 60px;
+        width: 70px;
+        height: 50px;
     }
+
+    .titulo-paginas {
+        font-size: 24px;
+        padding: 10px;
+    }
+
+    .promociones {
+        width: 9rem;
+        height: 9rem;
+        font-size: 1rem;
+    }
+
+    .grid-servicios {
+
+        display: grid;
+        grid-template-rows: repeat(3, auto);
+        grid-template-columns: repeat(1, 1fr);
+        width: 500px;
+        margin: 25px auto;
+        gap: 20px;
+        padding: 0%
+    }
+
+    .hero h1 {
+        font-size: 1.8rem;
+    }
+
+    .contact-items {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
 }
 
 /* (1440px) */
