--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -1,9 +1,9 @@
 /* animacion del logo */
-.navbar img {
-    height: 50px; 
-    position: relative; 
-    animation: logo-slide-horizontal 1.5s ease-in-out; 
-}
+// .navbar img {
+//     height: 50px; 
+//     position: relative; 
+//     animation: logo-slide-horizontal 1.5s ease-in-out; 
+// }
 
 @keyframes logo-slide-horizontal {
     0% {
